[gd_scene load_steps=2 format=3 uid="uid://dxynlqfncmbll"]

[ext_resource type="Script" path="res://scripts/weapons/ranged/ranged_weapon.gd" id="1_xy3xd"]

[node name="RangedWeapon" type="Node2D"]
script = ExtResource("1_xy3xd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true

[node name="PivotPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="Sprite2D" parent="PivotPoint"]
unique_name_in_owner = true
position = Vector2(65, 0)
scale = Vector2(2, 2)

[node name="ProjectilePoint" type="Marker2D" parent="PivotPoint/Sprite"]
unique_name_in_owner = true
position = Vector2(7, 0)
